# surrealdb_json_cli

./: Cargo.toml  README.md  empty_pokemon.csv  pokemon.csv
src/: main.rs
