[package]
name = "surrealdb_json_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
once_cell = "1.19.0"
serde = "1.0.201"
serde_json = "1.0.117"
surrealdb = { version = "1.4.0", features = ["kv-mem", "http", "protocol-http"] }
tokio = { version = "1.37.0", features = ["full"] }
